src/test/deca/context/invalid/class/undefined_type_class.deca
//Description:
//     Error : undefined type class in main block
//
// Result:
//    UNDEFINED_TYPE: Type \(.\)\+ is undefined
//    line 9

{
    objectA a = new objectA();
}